# YT-Content-Analyzer

./: README.md  pyproject.toml
yt_assistant/: app.py
yt_assistant/src/api/: asst_cnt.py  asst_route.py  res_model.py
