[tool.poetry]
name = "yt-assistant"
version = "0.1.0"
description = ""
authors = ["Al Fareed <76606638+Al-Fareed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
langchain-core = "^0.2.22"
langchain = "^0.2.10"
langchain-text-splitters = "^0.2.2"
youtube-transcript-api = "^0.6.2"
faiss-cpu = "^1.8.0.post1"

[tool.poetry.scripts]
my-script = "my_module:main"
start = "yt_assistant.app:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
